--- a/plasma/look-and-feel/com.github.vinceliuice.Layan/metadata.desktop
+++ b/plasma/look-and-feel/com.github.vinceliuice.Layan/metadata.desktop
@@ -17,4 +17,4 @@ X-KDE-PluginInfo-Version=
 X-KDE-PluginInfo-Website=https://github.com/vinceliuice/Layan-kde
 X-KDE-fallbackPackage=org.kde.breeze.desktop
 X-Plasma-MainScript=defaults
-X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/1325239,kns://plasma-themes.knsrc/api.kde-look.org/1325241,kns://aurorae.knsrc/api.kde-look.org/1325238,kns://icons.knsrc/api.kde-look.org/1279924,kns://wallpaper.knsrc/api.kde-look.org/1309218,kns://sddmtheme.knsrc/api.kde-look.org/1325235
+X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/1325239,kns://plasma-themes.knsrc/api.kde-look.org/1325241,kns://aurorae.knsrc/api.kde-look.org/1325238,kns://icons.knsrc/api.kde-look.org/1279924,kns://wallpaper.knsrc/api.kde-look.org/1309218,kns://sddmtheme.knsrc/api.kde-look.org/1325235,kns://xcursor.knsrc/api.kde-look.org/1358330,kns://cgcgtk3.knsrc/api.kde-look.org/1309214
